ingress/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: elasticsearch
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /elasticsearch
          backend:
            serviceName: elasticsearch
            servicePort: 9200
